# emu8080

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  TODO.md  cpu.cpp  cpu.h  main.cpp
asm/: HELLO.ASM
cpu/: cpu.cpp  cpu.h
roms/: HELLO.COM
src/: cpu.cpp  cpu.h  main.cpp
test/: BDOS.ASM  hello.cpp  main.cpp  test.cpp  tst8080.cpp  utils.cpp  utils.h
test/asm/: bdos.asm  hello.asm
